# KuraiPilot

./: .editorconfig  .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IDEA.md  INVESTIGATION.md  LICENSE  MATH.md  Makefile  README.md  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
bench/results/: accepted.json
docs/: 01-architecture-overview.md  02-pipeline-spec.md  03-tech-stack.md  04-ai-components.md  05-performance-and-capacity.md  06-testing-and-evaluation.md  07-roadmap.md  README.md
docs/adr/: ADR-001-local-first.md  ADR-002-deterministic-core.md  ADR-003-ffmpeg-nvenc.md  ADR-004-saliency-model.md  ADR-005-ollama-role.md  ADR-006-python-core.md
docs/evaluations/: 2026-07-18-ab-saliencia.md  ab_saliencia_votes.jsonl
models/: manifest.toml
presets/: alta-fidelidad.toml  detallado.toml  nitido.toml  retro.toml
src/kurai/: __init__.py  bench.py  cli.py  config.py  probe.py  types.py
src/kurai/ai/: __init__.py  flow.py  glyph_cnn.py  saliency.py  scene_analyst.py
src/kurai/engine/: __init__.py  decode.py  dither.py  edges.py  encode.py  grid.py  live.py  mapping.py  pipeline.py  stability.py
src/kurai/preview/: __init__.py  protocol.py  server.py  session.py
src/kurai/preview/static/: app.js  index.html
src/kurai/render/: __init__.py  ansi.py  atlas.py  glyphs.py
tests/: conftest.py  test_bench.py  test_cli.py  test_config.py  test_contracts.py  test_decode.py  test_edges.py  test_encode.py  test_encode_flags.py  test_grid.py  test_live.py  test_media_edge_cases.py  test_media_fixtures.py  test_pipeline.py  test_preview.py  test_probe.py  test_properties.py  test_render.py  test_saliency.py  test_smoke.py  test_stability.py  test_types.py
tests/golden/: gradient_nitido_40x10.npz  gradient_retro_40x10.npz
tools/: ab_review.py  bench_videos.py  calibrate_ramp.py  fetch_models.py  make_goldens.py  setup_github.sh
