[project]
name = "kurai"
version = "0.1.0"
description = "Conversor local-first de video a video ASCII renderizado"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer>=0.15",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "numpy>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# GPU: instalar con `uv sync --extra gpu` — pesado (~1 GB), no default.
# ADR-004/ADR-006: ONNX Runtime CUDA EP + CuPy para CUDA 13.x.
gpu = [
    "onnxruntime-gpu>=1.20",
    "cupy-cuda13x>=13.0",
]
# Preview server (Fase 0.5)
preview = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
]
# Detección de escena (Fase 1+, alimenta reset de histéresis y Scene Analyst)
scene = [
    "scenedetect[opencv]>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.0",
]

[project.scripts]
kurai = "kurai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kurai"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["kurai"]
mypy_path = "src"

[[tool.mypy.overrides]]
# El sidecar y render usan libs sin stubs completos; estricto igual en firmas propias
module = ["cupy.*", "onnxruntime.*", "cv2.*"]
ignore_missing_imports = true

# Capas de docs/01 §3 como contrato ejecutable: un import que viole la
# arquitectura falla en CI, no en la review. Cambiar una capa = cambiar docs/01.
[tool.importlinter]
root_package = "kurai"

[[tool.importlinter.contracts]]
name = "Capas de la arquitectura (docs/01 §3)"
type = "layers"
exhaustive = false
layers = [
    "kurai.cli",
    "kurai.preview",
    "kurai.engine",
    "kurai.ai | kurai.render",
    "kurai.config | kurai.types | kurai.probe",
]

[tool.coverage.run]
source = ["kurai"]
# Módulos 100% stub de fases futuras (docs/07): se sacan del omit cuando su
# fase se implementa — medirlos hoy solo distorsiona el número.
omit = ["*/preview/*", "*/ai/*"]

[tool.coverage.report]
# El umbral es un piso de no-regresión, no una meta: subirlo al implementar
# fases, nunca bajarlo para hacer pasar un PR.
fail_under = 85
exclude_also = [
    "raise NotImplementedError",  # stubs de fases futuras (docs/07)
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "gpu: requiere GPU NVIDIA (se salta con KURAI_DISABLE_GPU=1 o sin nvidia-smi)",
    "golden: compara contra golden files de CharMatrix",
    "ffmpeg: requiere ffmpeg en PATH (fixtures sintéticos)",
]
